k8s/writer-api/base/istio/virtualService.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: iris-write-api
spec:
  hosts:
    - iris.demo.ndtp.co.uk
  gateways:
    - iris/iris-write-api-ingress-gateway
  http:
    - match:
        - uri:
            prefix: /write-api

      rewrite:
        uriRegexRewrite:
          match: ^/write-api/?(.*)$
          rewrite: /\1
      route:
        - destination:
            host: iris-write-api
            port:
              number: 3010
